<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="all_channels">ON DEMAND</string>
    <string name="all_channels_logo">ON DEMAND |</string>
    <string name="app_name">Xumo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="back_to_movies">BACK TO MOVIES</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">?unknown_ref: 104000a</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="ccl_ad_message">Back in 15 seconds</string>
    <string name="ccl_cancel">Cancel</string>
    <string name="ccl_caption">Caption</string>
    <string name="ccl_caption_audio">Audio</string>
    <string name="ccl_caption_no_audio_tracks">No Audio Tracks Available</string>
    <string name="ccl_caption_no_text_tracks">No Text Tracks Available</string>
    <string name="ccl_caption_no_tracks_available">No tracks available</string>
    <string name="ccl_caption_subtitles">Subtitles</string>
    <string name="ccl_casting_to_device">Casting to %1$s</string>
    <string name="ccl_disconnect">Disconnect</string>
    <string name="ccl_error">Error</string>
    <string name="ccl_failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="ccl_failed_authorization_timeout">Authorization timed out</string>
    <string name="ccl_failed_no_connection">No connection to the cast device is present</string>
    <string name="ccl_failed_no_connection_short">No connection</string>
    <string name="ccl_failed_no_connection_trans">Connection to the cast device has been lost. Application is trying to re-establish the connection, if possible. Please wait for a few seconds and try again.</string>
    <string name="ccl_failed_perform_action">Failed to perform the action</string>
    <string name="ccl_failed_receiver_player_error">Receiver player has encountered a severe error</string>
    <string name="ccl_failed_seek">Failed to seek to the new position on the cast device</string>
    <string name="ccl_failed_setting_volume">Failed to set the volume</string>
    <string name="ccl_failed_status_request">Failed to sync up with the cast device</string>
    <string name="ccl_failed_to_connect">Could not connect to the device</string>
    <string name="ccl_failed_to_find_app">The application you are trying to launch is not available on your Cast device</string>
    <string name="ccl_failed_to_launch_app">Failed to launch application</string>
    <string name="ccl_failed_to_load_media">Failed to load the media</string>
    <string name="ccl_failed_to_pause">Failed to pause the playback of media</string>
    <string name="ccl_failed_to_play">Failed to start the playback of media</string>
    <string name="ccl_failed_to_set_track_style">Failed to update the captions style.</string>
    <string name="ccl_failed_to_stop">Failed to stop the playback of media</string>
    <string name="ccl_forward">Forward</string>
    <string name="ccl_info_na">Information Not Available</string>
    <string name="ccl_intro_overlay_button_text">?unknown_ref: 104000a</string>
    <string name="ccl_key_caption_background_color">ccl_caption_background_color</string>
    <string name="ccl_key_caption_background_opacity">ccl_caption_font_background_opacity</string>
    <string name="ccl_key_caption_edge_type">ccl_caption_edge_type</string>
    <string name="ccl_key_caption_enabled">ccl_caption_enabled</string>
    <string name="ccl_key_caption_font_family">ccl_caption_font_family</string>
    <string name="ccl_key_caption_font_scale">ccl_caption_font_scale</string>
    <string name="ccl_key_caption_text_color">ccl_caption_text_color</string>
    <string name="ccl_key_caption_text_opacity">ccl_caption_text_opacity</string>
    <string name="ccl_live">Live</string>
    <string name="ccl_loading">Loading…</string>
    <string name="ccl_media_route_menu_title">Play on…</string>
    <string name="ccl_mini_upnext">Up Next</string>
    <string name="ccl_no_media_info">No media information available</string>
    <string name="ccl_none">None</string>
    <string name="ccl_off">Off</string>
    <string name="ccl_ok">OK</string>
    <string name="ccl_on">On</string>
    <string name="ccl_pause">Pause</string>
    <string name="ccl_pick_tracks">Tracks</string>
    <string name="ccl_play">Play</string>
    <string name="ccl_prefs_caption_background_color_title">Background Color</string>
    <string name="ccl_prefs_caption_background_color_value_default">#000000</string>
    <string name="ccl_prefs_caption_background_opacity_title">Background Opacity</string>
    <string name="ccl_prefs_caption_background_opacity_value_default">FF</string>
    <string name="ccl_prefs_caption_disabled">Disabled</string>
    <string name="ccl_prefs_caption_edge_color_title">Edge Color</string>
    <string name="ccl_prefs_caption_edge_type_title">Edge Type</string>
    <string name="ccl_prefs_caption_edge_type_value_default">EDGE_TYPE_NONE</string>
    <string name="ccl_prefs_caption_enabled">Enabled</string>
    <string name="ccl_prefs_caption_enabled_title">Caption Availability</string>
    <string name="ccl_prefs_caption_font_family_title">Font Family</string>
    <string name="ccl_prefs_caption_font_family_value_default">FONT_FAMILY_SERIF</string>
    <string name="ccl_prefs_caption_font_scale_title">Text Size</string>
    <string name="ccl_prefs_caption_font_scale_value_default">1.0</string>
    <string name="ccl_prefs_caption_text_color_title">Text Color</string>
    <string name="channel_logo_description">channel logo</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="expand_description">expand icon</string>
    <string name="for_channel_info"> FOR CHANNEL INFO</string>
    <string name="mute_description">mute icon</string>
    <string name="on_now">ON NOW</string>
    <string name="player_channel_error_message">This stream has failed to load.\nPlease wait while the connection is retried.</string>
    <string name="share_description">share icon</string>
    <string name="shrink_description">shrink icon</string>
    <string name="to_launch_guide">TO LAUNCH GUIDE</string>
    <string name="up_next">UP NEXT</string>
    <string name="volume_on_description">volume on icon</string>
</resources>