<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:layout_width="match_parent" app:layout_height="match_parent">
    <View app:id="@+id/center_view" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x1" app:layout_centerInParent="true" />
    <View app:background="@drawable/gradation_player_top" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1" app:layout_alignBottom="@+id/center_view" app:layout_alignParentTop="true" />
    <View app:background="@drawable/gradation_player_bottom" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1" app:layout_alignTop="@+id/center_view" app:layout_alignParentBottom="true" />
    <RelativeLayout app:id="@+id/channel_layout" app:layout_width="UNKNOWN_DATA_0x3c01" app:layout_height="UNKNOWN_DATA_0x4101" app:layout_marginTop="5dp" app:layout_marginStart="10dp">
        <ImageView app:id="@+id/channel_logo" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x2d01" app:scaleType="fitCenter" app:contentDescription="@string/channel_logo_description" />
        <TextView app:textSize="12sp" app:textColor="@color/xumoWhite" app:ellipsize="end" app:id="@+id/channel_number" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_below="@+id/channel_logo" app:textAlignment="center" fontPath="fonts/Lato-Bold.ttf" />
    </RelativeLayout>
    <ImageButton app:id="@+id/cast_button" app:background="0x0" app:visibility="gone" app:layout_width="UNKNOWN_DATA_0x1e01" app:layout_height="UNKNOWN_DATA_0x1a01" app:layout_marginTop="12dp" app:src="@drawable/ic_mr_button_disconnected_light" app:scaleType="fitCenter" app:tint="0x106000b" app:layout_alignParentTop="true" app:layout_marginStart="10dp" app:layout_marginEnd="12dp" app:layout_alignParentEnd="true" />
    <RelativeLayout app:id="@+id/cast_media_route_container" app:visibility="gone" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_alignParentTop="true" app:layout_toStartOf="@+id/cast_button" app:layout_alignParentEnd="true">
        <com.xumo.xumo.chromecast.widget.CustomMediaRouteButton app:id="@+id/cast_media_route_button" app:layout_width="UNKNOWN_DATA_0x1e01" app:layout_height="UNKNOWN_DATA_0x1601" app:layout_marginTop="14dp" app:mediaRouteTypes="user" app:layout_marginStart="10dp" app:layout_marginEnd="10dp" />
    </RelativeLayout>
    <TextView app:textSize="14sp" app:textColor="@color/xumoWhite" app:ellipsize="end" app:id="@id/title" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="16dp" app:lineSpacingExtra="6sp" app:textAlignment="textStart" app:layout_marginStart="10dp" app:layout_toStartOf="@+id/cast_media_route_container" app:layout_toEndOf="@+id/channel_layout" fontPath="fonts/Raleway-Bold.ttf" />
    <ImageButton app:id="@+id/play" app:background="#00ffffff" app:layout_width="UNKNOWN_DATA_0x1e01" app:layout_height="UNKNOWN_DATA_0x1e01" app:src="@drawable/play" app:scaleType="fitCenter" app:layout_centerInParent="true" app:contentDescription="@string/exo_controls_play_description" />
    <ImageButton app:id="@+id/pause" app:background="#00ffffff" app:layout_width="UNKNOWN_DATA_0x1e01" app:layout_height="UNKNOWN_DATA_0x1e01" app:src="@drawable/pause" app:scaleType="fitCenter" app:layout_centerInParent="true" app:contentDescription="@string/exo_controls_pause_description" />
    <RelativeLayout app:id="@+id/player_tool_bar" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3c01" app:layout_alignParentBottom="true" app:layout_marginStart="10dp" app:layout_marginEnd="10dp">
        <ImageButton app:id="@+id/mute" app:background="#00ffffff" app:layout_width="UNKNOWN_DATA_0x1e01" app:layout_height="match_parent" app:src="@drawable/mute" app:scaleType="fitCenter" app:contentDescription="@string/mute_description" app:layout_alignParentStart="true" />
        <ImageButton app:id="@+id/volume_on" app:background="#00ffffff" app:visibility="invisible" app:layout_width="UNKNOWN_DATA_0x1e01" app:layout_height="match_parent" app:src="@drawable/volume_on" app:scaleType="fitCenter" app:contentDescription="@string/volume_on_description" app:layout_alignParentStart="true" />
        <ImageButton app:id="@+id/expand" app:background="#00ffffff" app:layout_width="UNKNOWN_DATA_0x1e01" app:layout_height="match_parent" app:src="@drawable/expand" app:scaleType="fitCenter" app:contentDescription="@string/expand_description" app:layout_alignParentEnd="true" />
        <ImageButton app:id="@+id/shrink" app:background="#00ffffff" app:visibility="invisible" app:layout_width="UNKNOWN_DATA_0x1e01" app:layout_height="match_parent" app:src="@drawable/shrink" app:scaleType="fitCenter" app:contentDescription="@string/shrink_description" app:layout_alignParentEnd="true" />
        <ImageButton app:id="@+id/share" app:background="#00ffffff" app:layout_width="UNKNOWN_DATA_0x1e01" app:layout_height="match_parent" app:src="@drawable/share" app:scaleType="fitCenter" app:contentDescription="@string/share_description" app:layout_marginEnd="20dp" app:layout_toStartOf="@+id/expand" />
        <TextView app:textSize="12sp" app:textColor="@color/xumoWhite" app:id="@id/exo_position" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="15dp" app:layout_marginStart="20dp" app:layout_toEndOf="@+id/mute" fontPath="fonts/Lato-Bold.ttf" />
        <TextView app:textSize="12sp" app:textColor="@color/xumoWhite" app:id="@id/exo_duration" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="15dp" app:layout_marginEnd="20dp" app:layout_toStartOf="@+id/share" fontPath="fonts/Lato-Bold.ttf" />
        <com.google.android.exoplayer2.ui.DefaultTimeBar app:id="@id/exo_progress" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="30dp" app:layout_marginStart="10dp" app:layout_marginEnd="10dp" app:layout_toStartOf="@+id/share" app:layout_toEndOf="@+id/mute" app:buffered_color="@color/bufferedColor" app:played_color="@color/playedColor" app:scrubber_color="@color/scrubberColor" app:unplayed_color="@color/unplayedColor" />
    </RelativeLayout>
</RelativeLayout>
