<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:layout_width="match_parent" app:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout app:id="@+id/player_layout" app:background="0x106000c" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_alignParentTop="true">
        <com.google.android.exoplayer2.ui.PlayerView app:id="@+id/player_view" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1" app:layout_constraintDimensionRatio="h,320:180" app:resize_mode="2">
            <RelativeLayout app:id="@+id/player_error_message_layout" app:background="0x106000c" app:layout_width="match_parent" app:layout_height="match_parent">
                <TextView app:textSize="16sp" app:textColor="@color/xumoGrayFourth" app:id="@+id/player_error_message" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/player_channel_error_message" app:layout_centerInParent="true" app:lineSpacingExtra="12sp" app:textAlignment="center" fontPath="fonts/Raleway-Medium.ttf" />
            </RelativeLayout>
            <ProgressBar app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/buffering_indicator" app:visibility="gone" app:layout_width="wrap_content" app:layout_height="wrap_content" />
            <FrameLayout app:id="@+id/fb_ad_view" app:visibility="gone" app:layout_width="match_parent" app:layout_height="match_parent" />
        </com.google.android.exoplayer2.ui.PlayerView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.tabs.TabLayout app:id="@+id/on_now_tab" app:background="@color/onNowTabLayoutBackgroundColor" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_below="@+id/player_layout" app:tabGravity="0" app:tabIndicatorColor="@color/tabIndicatorColor" app:tabMaxWidth="0dp" app:tabMode="1">
        <com.google.android.material.tabs.TabItem app:layout="@layout/tab_item_on_now" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/on_now" />
        <com.google.android.material.tabs.TabItem app:layout="@layout/tab_item_on_now" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/up_next" />
    </com.google.android.material.tabs.TabLayout>
    <View app:id="@+id/separator_line" app:layout_below="@+id/on_now_tab" style="@style/AppTheme_SeparatorLine" />
    <RelativeLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1" app:layout_below="@+id/separator_line" app:layout_alignParentBottom="true" app:splitMotionEvents="false">
        <androidx.recyclerview.widget.RecyclerView app:id="@+id/channel_logo_list" app:background="@color/onNowBackgroundColor" app:layout_width="UNKNOWN_DATA_0x4c01" app:layout_height="match_parent" />
        <androidx.viewpager.widget.ViewPager app:id="@+id/list_viewpager" app:background="@color/onNowBackgroundColor" app:layout_width="wrap_content" app:layout_height="match_parent" app:layout_toEndOf="@+id/channel_logo_list" />
    </RelativeLayout>
</RelativeLayout>
